Update the Styling for Footer
Update size color etc of the footer added in the HTML section of this page.

--- a/Web Dev Projects_or_Portfolios/Current weather web app/style.css
+++ b/Web Dev Projects_or_Portfolios/Current weather web app/style.css
@@ -15,7 +15,7 @@ body{
     font-family: "Garamond", serif;
 }
 
-.location, .temperature, .navbar {
+.location, .temperature, .navbar, .footer {
     height: 30vh;
     width: 50%;
     display: flex;
